# pythia

./: .gitignore  .pythiaignore  CLAUDE.md  LESSONS.md  README.md  package-lock.json  package.json  progress.txt  registry.json  tsconfig.json  tsup.config.ts
.claude/: taxonomy.json
.pythia-active/: pythia-engine.json  throwaway-test.json
design/: noosphere-master-spec.md  pythia-lcs-spec.md  pythia-persistent-oracle-design.md  sprint-10-spec.md  sprint-11-spec.md  sprint-6-spec.md  sprint-7-spec.md  sprint-8-spec.md  sprint-9-spec.md
docs/: APP_FLOW-v2.md  APP_FLOW.md  BACKEND_STRUCTURE-v2.md  BACKEND_STRUCTURE.md  CODING_STANDARDS.md  DESIGN_SYSTEM.md  EMBEDDING_TEST_PLAN.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN-v2.md  IMPLEMENTATION_PLAN.md  PRD-v2.md  PRD.md  TECH_STACK-v2.md  TECH_STACK.md  review-codex-canonical-docs.md  review-gemini-canonical-docs.md
research/: Building a generational oracle- every way LLM memory persistence breaks.md  JSONL interaction logging for AI oracle systems .md  MCP server patterns for shared state, child processes, and concurrency.md  RESEARCH_IMPACT_ANALYSIS_CODEX.md  RESEARCH_IMPACT_ANALYSIS_GEMINI.md  deep-research-01-primitives-decomposition.md  deep-research-02-catastrophic-forgetting.md  deep-research-03-atomic-cas-sqlite.md  deep-research-04-otp-supervision-saga.md  deep-research-05-git-internals-cas.md  deep-research-06-event-sourcing-cqrs.md  deep-research-07-rag-vs-full-context.md  deep-research-08-durable-workflow-engines.md  gemini-research-4.md  (+51 more)
src/pythia-auth/: Cargo.toml
src/pythia-auth/src/: main.rs
(+473 files in other folders)
